Fix Ruby visual rects in flipped blocks writing mode.

BUG=628323

Review-Url: https://codereview.chromium.org/2166923004
Cr-Commit-Position: refs/heads/master@{#408030}

Former-commit-id: d32d77e91cb77d625275c21b29ec41064f8ccab2